[gd_scene load_steps=4 format=3 uid="uid://cjr2v58nwfgxy"]

[ext_resource type="Script" path="res://Fog of War - Test/fog_of_war_texture.gd" id="1_7xdr7"]
[ext_resource type="Texture2D" uid="uid://uy4so3xnrblb" path="res://Materials/Textures/fog_of_war.png" id="2_q1afq"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_217i4"]
blend_mode = 3
light_mode = 1

[node name="fog_of_war_texture" type="Control"]
material = SubResource("CanvasItemMaterial_217i4")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7xdr7")

[node name="fog_tick" type="Timer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
render_target_update_mode = 4

[node name="fow_camera" type="Camera2D" parent="SubViewportContainer/SubViewport"]

[node name="fow_explored" type="ColorRect" parent="SubViewportContainer/SubViewport"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="fow_texture" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
texture = ExtResource("2_q1afq")
centered = false

[node name="fow_units" type="Node2D" parent="SubViewportContainer/SubViewport"]
